--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="DgN-tJ-ym2" id="Q3k-3p-7M1"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="6Vb-ol-w75"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="6Vb-ol-w75">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="MHf-nR-P2M">
+                            <color key="tintColor" red="1" green="0.99997437" blue="0.99999129769999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="DgN-tJ-ym2" id="wta-FT-Cdq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tnv-LQ-EVq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
